# differential-inductive-sensor

./: README.md
eq/: pyproject.toml
eq/src/: eq.py
